src/components/calculator/calculator.scss
.mainContainer {
  background-color: rgb(55, 56, 56);
  height: 100%;
  min-height: 100%;
  border-radius: 0.5rem;
  padding: 0.5rem;
  .bander {
    width: 100%;
    display: flex;
    justify-content: flex-start;
    background-color: rgb(34, 35, 35);
    border-radius: 0.5rem 0.5rem 0 0;

    span {
      margin-left: 0.5rem;
      color: white;
      margin-top: 0.5rem;
    }
  }
  header {
    position: relative;
    min-height: 20vh;
    background-color: rgb(34, 35, 35);
    border-radius: 0 0 0.5rem 0.5rem;

    .contentContainer {
      display: flex;
      align-items: flex-end;
      justify-content: flex-end;
      position: absolute;
      bottom: 0;
      width: 100%;
      height: 100%;
      span {
        color: white;
        font-size: 2.2rem;
        font-weight: 600;
        margin: 0 1rem 1rem 0;
      }
    }
  }

  body {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    height: 60vh;
  }
}

